Fixed padding for workspace indicator on collapsed mode

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -399,8 +399,8 @@
     }
 
     & #zen-current-workspace-indicator {
-      margin-left: 0;
-      margin-right: 0;
+      padding-left: 0;
+      padding-right: 0;
       display: flex;
       align-items: center;
       justify-content: center;
